# steam-cli

./: CMakeLists.txt  Game.cpp  Game.hpp  Main.cpp
arch/: PKGBUILD
utils/: fs.cpp  fs.hpp  str.cpp  str.hpp
